<resources>
    <string name="app_name">AndroidNavigation</string>
    <string name="title_activity_maps">Map</string>

    <string name="access_location">Location access is needed to show your location on the map</string>
    <string name="dialog_confirm">CONFIRM</string>

    <string name="detail_address">Address</string>
    <string name="detail_description">Description</string>
    <string name="detail_categories">Categories</string>
    <string name="detail_website">Website</string>
    <string name="detail_default">-</string>
</resources>