<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="ContentDescription">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/CollapsingToolbarCollapsedAppBarTextAppearance"
            app:expandedTitleMarginEnd="@dimen/two_unit_dp"
            app:expandedTitleMarginStart="@dimen/two_unit_dp"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarExpandedAppBarTextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Top part container -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/background_gradient"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contact_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/topDetailContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_unit_dp">

                <TextView
                    android:id="@+id/addressTitle"
                    style="@style/DetailTitleTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/one_unit_dp"
                    android:layout_toStartOf="@id/ratingContainer"
                    android:text="@string/detail_address" />

                <TextView
                    android:id="@+id/address"
                    style="@style/DetailDescriptionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addressTitle"
                    android:layout_toStartOf="@id/ratingContainer" />

                <LinearLayout
                    android:id="@+id/ratingContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/two_unit_dp"
                    android:layout_marginRight="@dimen/two_unit_dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_default"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/three_unit_sp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/one_unit_dp"
                        android:paddingEnd="@dimen/one_unit_dp"
                        android:src="@drawable/ic_baseline_star_24"
                        android:tint="@color/textPrimary"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/one_unit_dp"
                android:layout_marginBottom="@dimen/one_unit_dp"
                android:background="@color/gradientDark" />

            <TextView
                style="@style/DetailTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_unit_dp"
                android:text="@string/detail_description" />

            <TextView
                android:id="@+id/description"
                style="@style/DetailDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_default" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/one_unit_dp"
                android:layout_marginBottom="@dimen/one_unit_dp"
                android:background="@color/gradientDark" />

            <TextView
                style="@style/DetailTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_unit_dp"
                android:text="@string/detail_categories" />

            <TextView
                android:id="@+id/categories"
                style="@style/DetailDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_default" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/one_unit_dp"
                android:layout_marginBottom="@dimen/one_unit_dp"
                android:background="@color/gradientDark" />

            <TextView
                style="@style/DetailTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_unit_dp"
                android:text="@string/detail_website" />

            <TextView
                android:id="@+id/website"
                style="@style/DetailDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/detail_default"
                android:textColorLink="@color/colorPrimary" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>